@@ -1,3 +1,8 @@
+2007-11-30  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* erc.el (open-ssl-stream, open-tls-stream, erc-network-name):
+	Declare as functions.
+
 2007-11-29  Giorgos Keramidas  <keramida@ceid.upatras.gr>  (tiny change)
 
 	* erc-backend.el, erc.el:
